--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "notionic",
+  "name": "fegase",
   "version": "1.0.0",
-  "homepage": "https://zuolan.me",
+  "homepage": "",
   "license": "MIT",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/izuolan/notionic.git"
+    "type": "",
+    "url": ""
   },
   "author": {
-    "name": "Zuo Lan",
-    "email": "i@zuolan.me",
-    "url": "https://zuolan.me"
+    "name": "",
+    "email": "",
+    "url": ""
   },
   "scripts": {
     "dev": "next dev",
